# Newsletter-System

./: .env.example  .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: newsletter.yml
agents/: email-publisher.md  korean-summarizer.md  newsletter-editor.md  relevance-classifier.md  water-orchestrator.md  web-collector.md
skills/korean-brief-summary/: SKILL.md
skills/monthly-newsletter-format/: SKILL.md
skills/water-relevance-filter/: SKILL.md
skills/water-web-search/: SKILL.md
skills/weekly-newsletter-format/: SKILL.md
tests/: test_newsletter.py
water_newsletter/: collector.py  config.py  emailer.py  formatter.py  main.py  models.py  sources.py  state.py  summarizer.py
