[project]
name = "water-newsletter"
version = "0.1.0"
description = "Automated global water environment newsletter via RSS and SMTP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]
llm = [
  "anthropic>=0.40.0",
]

[project.scripts]
water-newsletter = "water_newsletter.main:main"

[tool.setuptools.packages.find]
include = ["water_newsletter*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
